create ec2 playbook worked

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory=./inventory
 private_key_file = ./carmel-keypem.pem
-aws_profile = default
+export AWS_PROFILE = default
 
 [privilege_escalation]
 become=True
