--- a/ansible/create-infra.yaml
+++ b/ansible/create-infra.yaml
@@ -20,6 +20,12 @@
         state: present
       register: ec2
 
+    - name: Add new instance to host group
+      add_host:
+        hostname: "{{ item.network_interfaces[0].association.public_ip }}"
+        groupname: app-server
+      with_items: "{{ ec2.instances }}"
+
 #- name: Setup web server
 #  hosts: localhost
 #  user: centos
